--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <title>flag is Javascript library for non-blocking notifications. this plugin don't need to jquery library</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" /> <!--부트스트랩 CND이용-->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="_flag.css" />
+      <link rel="stylesheet" href="flag.css" />
     </head>
     <style type="text/css">
     body{opacity:0;transition: opacity .35s ease-in-out; -moz-transition: opacity .35s ease-in-out; -webkit-transition: opacity .35s ease-in-out}
@@ -325,7 +325,7 @@
            <p class="text-muted">2015.12.24 currently version is 0.1</p>
          </div>
        </footer>
-        <script type="text/javascript" src="_flag.js"></script>
+        <script type="text/javascript" src="flag.js"></script>
         <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=css&amp;skin=sunburst"></script>
         <script type="text/javascript">
         /* http://prismjs.com/download.html?themes=prism-dark&languages=markup+css+clike+javascript */
